--- a/app/scss/styles.css
+++ b/app/scss/styles.css
@@ -82,7 +82,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-size: 1.125rem;
+  font-size: 0.875rem;
   line-height: 1.3;
   font-weight: 300;
   font-family: "Public Sans", sans-serif;
@@ -92,13 +92,43 @@ body.no-scroll {
   overflow: hidden;
 }
 
+h1, h2, h3 {
+  margin-top: 0;
+}
+
 a, a:visited, a:hover {
   text-decoration: none;
 }
 
 .container {
+  max-width: 69.375rem;
+  margin: 0 auto;
+}
+.container--pall {
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+.container--py {
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
+}
+.container--px {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.container--pt {
+  padding-top: 2.25rem;
+}
+.container--pr {
+  padding-right: 1.5rem;
+}
+.container--pb {
+  padding-bottom: 2.25rem;
+}
+.container--pl {
+  padding-left: 1.5rem;
 }
 
 .flex {
@@ -115,6 +145,7 @@ a, a:visited, a:hover {
 }
 
 button, .button {
+  display: inline-block;
   padding: 0.875rem 2.1875rem;
   border-radius: 50px;
   cursor: pointer;
@@ -122,6 +153,11 @@ button, .button {
   border: 0;
   color: hsl(0deg, 0%, 100%);
   font-weight: 400;
+  font-size: 0.875rem;
+  transition: opacity 300ms ease-in-out;
+}
+button:hover, .button:hover {
+  opacity: 0.75;
 }
 
 @media (max-width: 63.9375em) {
@@ -136,37 +172,6 @@ button, .button {
   }
 }
 
-.header__logo img {
-  width: 8.8125rem;
-  height: 1.375rem;
-}
-.header__toggle > span {
-  display: block;
-  width: 26px;
-  height: 2px;
-  background-color: hsl(233deg, 26%, 24%);
-  transition: all 300ms ease-in-out;
-  transform-origin: 3px 1px;
-}
-.header__toggle > span:not(:last-child) {
-  margin-bottom: 5px;
-}
-.header__menu {
-  position: absolute;
-  width: calc(100% - 3rem);
-  left: 50%;
-  transform: translateX(-50%);
-  background: hsl(0deg, 0%, 100%);
-  margin-top: 1.5rem;
-  padding: 1.625rem;
-  border-radius: 5px;
-}
-.header__menu a {
-  display: block;
-  padding: 0.625rem;
-  color: hsl(233deg, 26%, 24%);
-  text-align: center;
-}
 .header.open .header__toggle > span:first-child {
   transform: rotate(45deg);
 }
@@ -190,6 +195,37 @@ button, .button {
   background-color: hsl(0deg, 0%, 100%);
   padding-top: 1.0625rem;
   padding-bottom: 1.0625rem;
+}
+.header__logo img {
+  width: 8.8125rem;
+  height: 1.375rem;
+}
+.header__toggle > span {
+  display: block;
+  width: 26px;
+  height: 2px;
+  background-color: hsl(233deg, 26%, 24%);
+  transition: all 300ms ease-in-out;
+  transform-origin: 3px 1px;
+}
+.header__toggle > span:not(:last-child) {
+  margin-bottom: 5px;
+}
+.header__menu {
+  position: absolute;
+  width: calc(100% - 6rem);
+  left: 50%;
+  transform: translateX(-50%);
+  background: hsl(0deg, 0%, 100%);
+  margin-top: 1.5rem;
+  padding: 1.625rem;
+  border-radius: 5px;
+}
+.header__menu a {
+  display: block;
+  padding: 0.625rem;
+  color: hsl(233deg, 26%, 24%);
+  text-align: center;
 }
 .header__links a {
   position: relative;
@@ -218,11 +254,64 @@ button, .button {
 .header__links a:hover::before {
   opacity: 1;
 }
-.header__cta {
-  font-size: 0.875rem;
-  color: hsl(0deg, 0%, 100%);
-  transition: opacity 300ms ease-in-out;
+
+@media (min-width: 64em) {
+  .hero {
+    display: flex;
+    align-items: center;
+  }
 }
-.header__cta:hover {
-  opacity: 0.75;
+.hero__image {
+  position: relative;
+  background-image: url("/images/bg-intro-mobile.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 17.5rem;
+}
+@media (min-width: 64em) {
+  .hero__image {
+    flex: 3;
+    order: 2;
+    height: 100%;
+    min-height: 41rem;
+    background-image: url("/images/bg-intro-desktop.svg");
+    background-position: left center;
+  }
+}
+.hero__image::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-image: url("/images/image-mockups.png");
+  background-size: 93%;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
+.hero__text {
+  text-align: center;
+}
+@media (min-width: 64em) {
+  .hero__text {
+    flex: 2;
+    order: 1;
+    text-align: left;
+  }
+}
+.hero__text h1 {
+  font-weight: 300;
+  font-size: 2.31rem;
+  line-height: 1.15;
+  color: hsl(233deg, 26%, 24%);
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 64em) {
+  .hero__text h1 {
+    font-size: 3.25rem;
+  }
+}
+.hero__text p {
+  line-height: 1.5;
+  margin-bottom: 2.25rem;
 }/*# sourceMappingURL=styles.css.map */
