--- a/app/scss/styles.css
+++ b/app/scss/styles.css
@@ -88,6 +88,11 @@ body {
   font-family: "Public Sans", sans-serif;
   color: hsl(233deg, 8%, 62%);
 }
+@media (min-width: 64em) {
+  body {
+    font-size: 1.125rem;
+  }
+}
 body.no-scroll {
   overflow: hidden;
 }
@@ -255,8 +260,11 @@ button:hover, .button:hover {
   opacity: 1;
 }
 
+.hero {
+  background-color: hsl(0deg, 0%, 98%);
+}
 @media (min-width: 64em) {
-  .hero {
+  .hero .container {
     display: flex;
     align-items: center;
   }
@@ -269,6 +277,12 @@ button:hover, .button:hover {
   background-position: center center;
   min-height: 17.5rem;
 }
+@media (min-width: 40em) {
+  .hero__image {
+    min-height: 25rem;
+    background-position: center 60%;
+  }
+}
 @media (min-width: 64em) {
   .hero__image {
     flex: 3;
@@ -279,15 +293,42 @@ button:hover, .button:hover {
     background-position: left center;
   }
 }
-.hero__image::before {
+@media (min-width: 64em) {
+  .hero__image::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    background-image: url("/images/bg-intro-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    width: 150%;
+    background-size: 122%;
+    background-position: 0% 83%;
+  }
+}
+.hero__image::after {
   content: "";
+  position: absolute;
   height: 100%;
   width: 100%;
-  position: absolute;
   background-image: url("/images/image-mockups.png");
   background-size: 93%;
   background-repeat: no-repeat;
   background-position: center bottom;
+}
+@media (min-width: 40em) {
+  .hero__image::after {
+    background-size: 52%;
+  }
+}
+@media (min-width: 64em) {
+  .hero__image::after {
+    width: 120%;
+    height: 122%;
+    background-size: 94%;
+    background-position: center 150%;
+    left: 22%;
+  }
 }
 .hero__text {
   text-align: center;
