--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -12,6 +12,7 @@ body {
   padding: 0;
   font-size: $font-sm;
   line-height: 1.3;
+  min-height: 300vh;
   font-weight: 300;
   font-family: 'Public Sans', sans-serif;
   color: $grayishBlue;
@@ -24,6 +25,24 @@ body {
 }
 h1, h2, h3 {
   margin-top: 0;
+  font-weight: 300;
+  line-height: 1.15;
+  color: $darkBlue;
+}
+h1{
+  font-size: 2.31rem;
+  margin-bottom: 1.5rem;
+  @include breakpoint-up(large){
+    font-size: $font-xlg;
+  }
+}
+h2{
+  font-size: 1.875rem;
+  margin-bottom: 1.5625rem;
+  @include breakpoint-up(large){
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+  }
 }
 a, a:visited, a:hover{
   text-decoration: none;
@@ -34,15 +53,25 @@ a, a:visited, a:hover{
   margin: 0 auto;
 
   &--pall{
-    padding-top: 2.25rem;
-    padding-bottom: 2.25rem;
+    padding-top: 4.375rem;
+    padding-bottom: 4.375rem;
     padding-left: 1.5rem;
-    padding-right: 1.5rem;   
+    padding-right: 1.5rem; 
+    @include breakpoint-up(large){
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+  
+    }  
   }
 
   &--py {
-    padding-top: 2.25rem;
-    padding-bottom: 2.25rem;
+    padding-top: 4.375rem;
+    padding-bottom: 4.375rem;
+    @include breakpoint-up(large){
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+  
+    }
   }
   &--px {
     padding-left: 1.5rem;
@@ -50,13 +79,20 @@ a, a:visited, a:hover{
   }
 
   &--pt{
-    padding-top: 2.25rem;
+    padding-top: 4.375rem;
+    @include breakpoint-up(large){
+      padding-top: 6rem;  
+    }
   }
   &--pr{
     padding-right: 1.5rem;
   }
   &--pb {
-    padding-bottom: 2.25rem;
+    padding-bottom: 4.375rem;
+    @include breakpoint-up(large){
+      padding-bottom: 6rem;
+  
+    }
   }
   &--pl {
     padding-left: 1.5rem;
