--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,5 +1,9 @@
 .hero {
   background-color: $veryLightGray;
+  text-align: center;
+  @include breakpoint-up(medium){
+    text-align: left;
+  }
   .container{
     @include breakpoint-up(large){
       display: flex;
@@ -17,7 +21,7 @@
 
     @include breakpoint-up(medium){
       min-height: 25rem;
-      background-position: center 60%;
+      background-position: center 70%;
 
     }
     @include breakpoint-up(large){
@@ -25,8 +29,7 @@
       order: 2;
       height: 100%;
       min-height: 41rem;
-      background-image: url('/images/bg-intro-desktop.svg');
-      background-position: left center;
+      background-image: none;
     }
   
   &::before {
@@ -73,16 +76,7 @@
       order: 1;
       text-align: left;
     }
-    h1{
-      font-weight: 300;
-      font-size: 2.31rem;
-      line-height: 1.15;
-      color: $darkBlue;
-      margin-bottom: 1.5rem;
-      @include breakpoint-up(large){
-        font-size: $font-xlg;
-      }
-    }
+
     p{
       line-height: 1.5;
       margin-bottom: 2.25rem;
