--- a/app/scss/styles.css
+++ b/app/scss/styles.css
@@ -84,6 +84,7 @@ body {
   padding: 0;
   font-size: 0.875rem;
   line-height: 1.3;
+  min-height: 300vh;
   font-weight: 300;
   font-family: "Public Sans", sans-serif;
   color: hsl(233deg, 8%, 62%);
@@ -99,6 +100,30 @@ body.no-scroll {
 
 h1, h2, h3 {
   margin-top: 0;
+  font-weight: 300;
+  line-height: 1.15;
+  color: hsl(233deg, 26%, 24%);
+}
+
+h1 {
+  font-size: 2.31rem;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 64em) {
+  h1 {
+    font-size: 3.25rem;
+  }
+}
+
+h2 {
+  font-size: 1.875rem;
+  margin-bottom: 1.5625rem;
+}
+@media (min-width: 64em) {
+  h2 {
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+  }
 }
 
 a, a:visited, a:hover {
@@ -110,27 +135,49 @@ a, a:visited, a:hover {
   margin: 0 auto;
 }
 .container--pall {
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
+  padding-top: 4.375rem;
+  padding-bottom: 4.375rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+@media (min-width: 64em) {
+  .container--pall {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+}
 .container--py {
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
+  padding-top: 4.375rem;
+  padding-bottom: 4.375rem;
+}
+@media (min-width: 64em) {
+  .container--py {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
 }
 .container--px {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 .container--pt {
-  padding-top: 2.25rem;
+  padding-top: 4.375rem;
+}
+@media (min-width: 64em) {
+  .container--pt {
+    padding-top: 6rem;
+  }
 }
 .container--pr {
   padding-right: 1.5rem;
 }
 .container--pb {
-  padding-bottom: 2.25rem;
+  padding-bottom: 4.375rem;
+}
+@media (min-width: 64em) {
+  .container--pb {
+    padding-bottom: 6rem;
+  }
 }
 .container--pl {
   padding-left: 1.5rem;
@@ -262,6 +309,12 @@ button:hover, .button:hover {
 
 .hero {
   background-color: hsl(0deg, 0%, 98%);
+  text-align: center;
+}
+@media (min-width: 40em) {
+  .hero {
+    text-align: left;
+  }
 }
 @media (min-width: 64em) {
   .hero .container {
@@ -280,7 +333,7 @@ button:hover, .button:hover {
 @media (min-width: 40em) {
   .hero__image {
     min-height: 25rem;
-    background-position: center 60%;
+    background-position: center 70%;
   }
 }
 @media (min-width: 64em) {
@@ -289,8 +342,7 @@ button:hover, .button:hover {
     order: 2;
     height: 100%;
     min-height: 41rem;
-    background-image: url("/images/bg-intro-desktop.svg");
-    background-position: left center;
+    background-image: none;
   }
 }
 @media (min-width: 64em) {
@@ -340,19 +392,63 @@ button:hover, .button:hover {
     text-align: left;
   }
 }
-.hero__text h1 {
-  font-weight: 300;
-  font-size: 2.31rem;
-  line-height: 1.15;
-  color: hsl(233deg, 26%, 24%);
-  margin-bottom: 1.5rem;
-}
-@media (min-width: 64em) {
-  .hero__text h1 {
-    font-size: 3.25rem;
-  }
-}
 .hero__text p {
   line-height: 1.5;
   margin-bottom: 2.25rem;
+}
+
+.feature {
+  background-color: hsl(220deg, 16%, 96%);
+}
+.feature__intro {
+  margin-bottom: 3.75rem;
+}
+@media (min-width: 64em) {
+  .feature__intro {
+    width: 60%;
+  }
+}
+@media (min-width: 40em) {
+  .feature__grid {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+.feature__item {
+  padding: 0.9375rem;
+}
+@media (min-width: 40em) {
+  .feature__item {
+    flex: 0 0 45%;
+  }
+}
+@media (min-width: 64em) {
+  .feature__item {
+    flex: 1;
+  }
+}
+.feature__icon {
+  margin-bottom: 1.875rem;
+}
+@media (min-width: 64em) {
+  .feature__icon {
+    margin-bottom: 2.75rem;
+  }
+}
+.feature__title {
+  font-size: 1.25rem;
+  line-height: 1.15;
+  font-weight: 300;
+  color: hsl(233deg, 26%, 24%);
+  margin-bottom: 1rem;
+}
+@media (min-width: 64em) {
+  .feature__title {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+}
+.feature__description {
+  font-size: 0.875rem;
+  line-height: 1.5;
 }/*# sourceMappingURL=styles.css.map */
