--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -3,7 +3,7 @@ html{
   box-sizing: border-box;
 }
 
-::before, ::after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
@@ -12,7 +12,7 @@ body {
   padding: 0;
   font-size: $font-sm;
   line-height: 1.3;
-  min-height: 300vh;
+  overflow-x: hidden; 
   font-weight: 300;
   font-family: 'Public Sans', sans-serif;
   color: $grayishBlue;
@@ -119,18 +119,31 @@ a, a:visited, a:hover{
 
 //BUTTONS
 button, .button {
+  position: relative;
   display: inline-block;
   padding: 0.875rem 2.1875rem;
+  background-image: linear-gradient(to right, $limeGreen, $brightCyan);
+  border: 0;
   border-radius: 50px;
   cursor: pointer;
-  background: linear-gradient(to right, $limeGreen, $brightCyan);
-  border: 0;
   color: $white;
   font-weight: 400;
   font-size: $font-sm;
-  transition: opacity 300ms ease-in-out;
-    &:hover{
-      opacity: 0.75;
+  overflow: hidden;
+  &::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.25);
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+
+  }
+    &:hover::before{
+      opacity: 1;
     }
 }
 //VISIBILITY
