--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -57,8 +57,9 @@
 
   }
   &__menu {
+    z-index: 1;
     position: absolute;
-    width: calc(100% - 6rem);
+    width: calc(100% - 3rem);
     left: 50%;
     transform: translateX(-50%);
     background: $white;
