--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+  overflow-x: hidden;
   background-color: $veryLightGray;
   text-align: center;
   @include breakpoint-up(medium){
@@ -28,13 +29,12 @@
       flex: 3;
       order: 2;
       height: 100%;
-      min-height: 41rem;
+      height: 41rem;
       background-image: none;
+      //background-image: url('/images/bg-intro-desktop.svg');
     }
   
   &::before {
-    
- 
     @include breakpoint-up(large){
       content: '';
       position: absolute;
@@ -52,8 +52,9 @@
     position: absolute;
     height: 100%;
     width: 100%;
+    left: 0;
     background-image: url('/images/image-mockups.png');
-    background-size: 93%;
+    background-size: 93%; 
     background-repeat: no-repeat;
     background-position: center bottom;
     @include breakpoint-up(medium){
