--- a/app/scss/styles.css
+++ b/app/scss/styles.css
@@ -75,7 +75,7 @@ html {
   box-sizing: border-box;
 }
 
-::before, ::after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
@@ -84,7 +84,7 @@ body {
   padding: 0;
   font-size: 0.875rem;
   line-height: 1.3;
-  min-height: 300vh;
+  overflow-x: hidden;
   font-weight: 300;
   font-family: "Public Sans", sans-serif;
   color: hsl(233deg, 8%, 62%);
@@ -197,19 +197,31 @@ a, a:visited, a:hover {
 }
 
 button, .button {
+  position: relative;
   display: inline-block;
   padding: 0.875rem 2.1875rem;
+  background-image: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
+  border: 0;
   border-radius: 50px;
   cursor: pointer;
-  background: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
-  border: 0;
   color: hsl(0deg, 0%, 100%);
   font-weight: 400;
   font-size: 0.875rem;
-  transition: opacity 300ms ease-in-out;
+  overflow: hidden;
 }
-button:hover, .button:hover {
-  opacity: 0.75;
+button::before, .button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.25);
+  opacity: 0;
+  transition: opacity 150ms ease-in-out;
+}
+button:hover::before, .button:hover::before {
+  opacity: 1;
 }
 
 @media (max-width: 63.9375em) {
@@ -264,8 +276,9 @@ button:hover, .button:hover {
   margin-bottom: 5px;
 }
 .header__menu {
+  z-index: 1;
   position: absolute;
-  width: calc(100% - 6rem);
+  width: calc(100% - 3rem);
   left: 50%;
   transform: translateX(-50%);
   background: hsl(0deg, 0%, 100%);
@@ -308,6 +321,7 @@ button:hover, .button:hover {
 }
 
 .hero {
+  overflow-x: hidden;
   background-color: hsl(0deg, 0%, 98%);
   text-align: center;
 }
@@ -341,7 +355,7 @@ button:hover, .button:hover {
     flex: 3;
     order: 2;
     height: 100%;
-    min-height: 41rem;
+    height: 41rem;
     background-image: none;
   }
 }
@@ -363,6 +377,7 @@ button:hover, .button:hover {
   position: absolute;
   height: 100%;
   width: 100%;
+  left: 0;
   background-image: url("/images/image-mockups.png");
   background-size: 93%;
   background-repeat: no-repeat;
@@ -451,4 +466,176 @@ button:hover, .button:hover {
 .feature__description {
   font-size: 0.875rem;
   line-height: 1.5;
+}
+
+.articles {
+  background-color: hsl(0deg, 0%, 98%);
+}
+
+.article__grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.875rem;
+}
+@media (min-width: 40em) {
+  .article__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 64em) {
+  .article__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+.article__item {
+  border-radius: 0.3125rem;
+  overflow: hidden;
+  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+  background-color: hsl(0deg, 0%, 100%);
+  transition: all 150ms ease-in-out;
+}
+.article__item:hover {
+  transform: scale(1.05);
+}
+.article__image {
+  height: 12.5rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.article__text {
+  padding: 1.875rem 1.875rem 2.5rem 1.875rem;
+  color: hsl(233deg, 8%, 62%);
+}
+@media (min-width: 40em) {
+  .article__text {
+    padding: 1.875rem 1.5625rem;
+  }
+}
+.article__author {
+  font-size: 0.625rem;
+  margin-bottom: 0.75rem;
+}
+.article__title {
+  font-size: 1.0625rem;
+  line-height: 1.2;
+  color: hsl(233deg, 26%, 24%);
+  margin-bottom: 0.5rem;
+}
+.article__description {
+  font-size: 0.8125rem;
+}
+
+.footer {
+  background-color: hsl(233deg, 26%, 24%);
+  color: hsl(0deg, 0%, 100%);
+  padding: 2.5rem;
+  text-align: center;
+}
+@media (min-width: 64em) {
+  .footer .container {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 3fr;
+    grid-template-rows: 1fr auto;
+    grid-template-areas: "logo links1 links2 cta" "social links1 links2 copyright";
+    gap: 1rem;
+    justify-items: start;
+  }
+}
+.footer a {
+  color: hsl(0deg, 0%, 100%);
+}
+.footer__logo {
+  display: inline-block;
+}
+@media (max-width: 63.9375em) {
+  .footer__logo {
+    margin-bottom: 1.875rem;
+  }
+}
+@media (min-width: 64em) {
+  .footer__logo {
+    grid-area: logo;
+  }
+}
+@media (max-width: 63.9375em) {
+  .footer__social {
+    margin-bottom: 1.875rem;
+  }
+}
+@media (min-width: 64em) {
+  .footer__social {
+    grid-area: social;
+    align-self: end;
+  }
+}
+.footer__social a {
+  display: inline-block;
+  height: 1.25rem;
+}
+.footer__social a svg path {
+  transition: fill 150ms ease-in-out;
+}
+.footer__social a:hover svg path {
+  fill: hsl(136deg, 65%, 51%);
+}
+.footer__social a:not(:last-child) {
+  margin-right: 1rem;
+}
+.footer__links {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 0.9375rem;
+}
+@media (min-width: 64em) {
+  .footer__links {
+    justify-content: space-between;
+    align-items: start;
+  }
+}
+@media (min-width: 64em) {
+  .footer__links.col1 {
+    grid-area: links1;
+  }
+}
+@media (max-width: 63.9375em) {
+  .footer__links.col2 {
+    margin-bottom: 1.875rem;
+  }
+}
+@media (min-width: 64em) {
+  .footer__links.col2 {
+    grid-area: links2;
+  }
+}
+.footer__links a {
+  line-height: 2.25;
+  transition: color 150ms ease-in-out;
+}
+.footer__links a:hover {
+  color: hsl(136deg, 65%, 51%);
+}
+@media (min-width: 64em) {
+  .footer__cta {
+    grid-area: cta;
+    text-align: right;
+    justify-self: end;
+  }
+}
+@media (max-width: 63.9375em) {
+  .footer__cta a.button {
+    margin-bottom: 1.875rem;
+  }
+}
+.footer__copyright {
+  font-size: 0.8125rem;
+  color: hsl(233deg, 8%, 62%);
+}
+@media (min-width: 64em) {
+  .footer__copyright {
+    grid-area: copyright;
+    align-self: end;
+    justify-self: end;
+  }
 }/*# sourceMappingURL=styles.css.map */
