--- a/styles.css
+++ b/styles.css
@@ -321,7 +321,7 @@ button:hover::before, .button:hover::before {
 }
 
 .hero {
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: hsl(0deg, 0%, 98%);
   text-align: center;
 }
@@ -338,7 +338,7 @@ button:hover::before, .button:hover::before {
 }
 .hero__image {
   position: relative;
-  background-image: url("/images/bg-intro-mobile.svg");
+  background-image: url("images/bg-intro-mobile.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -364,7 +364,7 @@ button:hover::before, .button:hover::before {
     content: "";
     position: absolute;
     height: 100%;
-    background-image: url("/images/bg-intro-desktop.svg");
+    background-image: url("images/bg-intro-desktop.svg");
     background-repeat: no-repeat;
     background-position: center bottom;
     width: 150%;
@@ -378,7 +378,7 @@ button:hover::before, .button:hover::before {
   height: 100%;
   width: 100%;
   left: 0;
-  background-image: url("/images/image-mockups.png");
+  background-image: url("images/image-mockups.png");
   background-size: 93%;
   background-repeat: no-repeat;
   background-position: center bottom;
